fixed layout problems

--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,7 +1,8 @@
 .gmail,
 .mobile,
 .location,
-.linkedin {
+.linkedin,
+.working-state {
   display: flex;
   justify-content: space-between;
   width: 50vw;
